[package]
name = "riz"
version = "0.1.0"
authors = ["Adam Talsma <adam@talsma.ca>"]
description = "Wiz lights API and CLI"
keywords = ["wiz", "lights", "iot"]
repository = "https://github.com/a-tal/riz.git"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.68"

[dependencies]
actix-web = "4"
log = "0.4.20"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.14.0"
utoipa = { version = "4.1.0", features = ["actix_extras", "uuid", "debug"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "serde", "macro-diagnostics"] }
clap = { version = "4.4.0", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
convert_case = "0.6.0"
actix-cors = "0.6.5"
